fix link to fuzzing API

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>
           I was the lead of this ~2 year effort at all stages of development. I
           authored the
-          <a href="golang.org/s/draft-fuzzing-design">API and CLI design</a>,
+          <a href="https://golang.org/s/draft-fuzzing-design">API and CLI design</a>,
           and led implementation, product planning, documentation, public
           communications, and launch.
         </p>
