add images and rework some of the styles

--- a/index.html
+++ b/index.html
@@ -8,25 +8,24 @@
 <body>
   <!-- Resume -->
   <h1>Katie Hockman</h1>
-  <span class="job-title">Software Engineer</span>
-  <span class="location">NYC, New York</span>
+  <span>Hello! I'm a senior software engineer, and I'm open to Go opportunities that are in-office in NYC.</span>
 
   <div class="communication">
     <ul class="no-bullet">
       <li>
-        <!-- <img src="" alt="Email" /> -->
-        <a class="comm-link" href="mailto:hockmankatie@gmail.com">hockmankatie@gmail.com</a>
+        <img src="images/email.png" alt="Email" style="width: 30px;" />
+        <a class="comm-link" href="mailto:katie@hockman.dev">katie@hockman.dev</a>
       </li>
       <li>
-        <!-- <img src="" alt="Github" /> -->
+        <img src="images/github.png" alt="Github" style="width: 28px; padding: 1px;" />
         <a class="comm-link" href="https://www.github.com/katiehockman">github.com/katiehockman</a>
       </li>
       <li>
-        <!-- <img src="" alt="Twitter" /> -->
+        <img src="images/twitter.png" alt="Twitter" style="width: 24px; padding: 3px;" />
         <a class="comm-link" href="https://www.twitter.com/katie_hockman">@katie_hockman</a>
       </li>
       <li>
-        <!-- <img src="" alt="LinkedIn" /> -->
+        <img src="images/linkedin.png" alt="LinkedIn" style="width: 28px; padding: 1px;" />
         <a class="comm-link" href="https://www.linkedin.com/in/katie-hockman-526b51135/">LinkedIn</a>
       </li>
     </ul>
@@ -63,7 +62,8 @@
           Tech Lead for Go fuzzing, which supports Go developers in finding and
           fixing bugs and security exploits in their programs. This is the first
           programming language to provide this functionality in its standard
-          toolchain, and promotes the security of the Go ecosystem.
+          toolchain, and promotes the security of the Go ecosystem. When I began
+          this work, it was the 3rd most upvoted proposal on the Go issue tracker.
         </p>
         <p>
           I was the lead of this ~2 year effort at all stages of development. I
