--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
   <!-- Resume -->
   <h1>Katie Hockman</h1>
-  <span>Hello! I'm a senior software engineer, and I'm open to Go opportunities that are in-office in NYC.</span>
+  <span>Hello! I'm a senior software engineer, and I'm open to in-office/hybrid
+    opportunities in NYC. Strong preference for working in Go.</span>
 
   <div class="communication">
     <ul class="no-bullet">
