update job status

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 <body>
   <!-- Resume -->
   <h1>Katie Hockman</h1>
-  <span style="font-style: italic;">Open to in-office/hybrid software engineering
-    opportunities in NYC. Strong preference for working in Go.</span>
 
   <div class="communication">
     <ul class="no-bullet">
@@ -78,10 +76,10 @@
 
   <div class="experience">
     <span class="job-title">
-      Google, New York - Senior Software Engineer | June 2015 - present
+      Google, New York - Senior Software Engineer | June 2015 - Februrary 2022
     </span>
     <h3 class="team-name">
-      Go Language Team, Go Security Team: August 2018 - present
+      Go Language Team, Go Security Team: August 2018 - February 2022
     </h3>
     <ul class="team-details">
       <li>
