--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="main.css" />
+
 <body>
   <!-- Resume -->
   <h1>Katie Hockman</h1>
@@ -75,12 +76,25 @@
   <h2>Experience</h2>
 
   <div class="experience">
-    <span class="job-title">
-      Google, New York - Senior Software Engineer | June 2015 - Februrary 2022
-    </span>
-    <h3 class="team-name">
-      Go Language Team, Go Security Team: August 2018 - February 2022
+    <h3 class="job-title">
+      Datadog | April 2022 - current
     </h3>
+    <h4 class="team-name">
+      APM Integration Go Team Lead
+    </h4>
+    <ul class="team-details">
+      <li>
+        <p>
+          Team Lead for tracing agent and Go tracing libraries in APM.
+        </p>
+      </li>
+    </ul>
+    <h3 class="job-title">
+      Google | June 2015 - Februrary 2022
+    </h3>
+    <h4 class="team-name">
+      Go Language Team, Go Security Team: August 2018 - February 2022
+    </h4>
     <ul class="team-details">
       <li>
         <p>
@@ -100,14 +114,15 @@
         <p>
           I have spoken on two Go Time podcasts about fuzzing
           (<a href="https://changelog.com/gotime/145">#145</a>,
-          <a href="https://changelog.com/gotime/187">#187</a>), and authored a
-          <a href="https://go.dev/blog/fuzz-beta">blog post</a>.
+          <a href="https://changelog.com/gotime/187">#187</a>), authored a
+          <a href="https://go.dev/blog/fuzz-beta">blog post</a>, and
+          contributed to the <a href="https://go.dev/doc/tutorial/fuzz">tutorial</a>.
         </p>
       </li>
       <li>
         <p>
-          Tech Lead for building the module mirror, checksum database, and index
-          (<a href="https://proxy.golang.org">proxy.golang.org</a>,
+          Tech Lead for production implementation of the module mirror, checksum database,
+          and index (<a href="https://proxy.golang.org">proxy.golang.org</a>,
           <a href="https://sum.golang.org">sum.golang.org</a>,
           and <a href="https://index.golang.org">index.golang.org</a> respectively),
           using the
@@ -121,22 +136,22 @@
         <p>
           I led a senior engineering team in design, development, product
           planning, and launch. Drove cross-team collaboration with product,
-          legal, leadership, and the open source community. I was the primary
-          contributor for the checksum database, which was the most
-          security-sensitive component of the project. This involved integrating with
+          legal, leadership, and the open source community. I was a primary
+          contributor to the checksum database, which ensured consistency of
+          Go module fetches across the entire ecosystem. This involved integrating with
           <a href="https://github.com/google/trillian">Trillian</a> (the Merkle tree
           backing the <a href="https://research.swtch.com/tlog">transparency log</a>),
           and implementing tiling of Trillian's data to store and serve through the
           frontend.
         </p>
         <p>
-          This service has an SLO of 5 9s, and I am a member of the oncall team.
+          This service has an SLO of 5 9s, and I was a member of the oncall team for
+          2.5 years.
         </p>
         <p>
-          I traveled around the world to present about this project, and my
-          <a href="https://youtu.be/KqTySYYhPUE">talk</a>
-          and <a href="https://go.dev/blog/module-mirror-launch">blog post</a>
-          have become a canonical source for Go developers to understand this topic.
+          I traveled around the world to <a href="https://youtu.be/KqTySYYhPUE">present</a>
+          the details of this project, and authored a
+          <a href="https://go.dev/blog/module-mirror-launch">blog post</a>.
         </p>
       </li>
       <li>
@@ -144,11 +159,10 @@
         implemented hardening measures and security fixes as a member of the
         Go security team.
       </li>
-      <li>Promoted to Senior Software Engineer in 2019.</li>
     </ul>
-    <h3 class="team-name">
+    <h4 class="team-name">
       Accessibility Internal Tools Team: August 2015 - August 2018
-    </h3>
+    </h4>
     <ul class="team-details">
       <li>
         This was a brand new team that we built from the ground up. I worked
@@ -170,11 +184,10 @@
         up-to-speed and passionate about accessibility. The goal was to make
         teams self-sustainable and set up for success in the long-term.
       </li>
-      <li>Promoted to Software Engineer II in 2017.</li>
     </ul>
-    <h3 class="team-name">
+    <h4 class="team-name">
       Supply Chain APIs Team: June 2015 - August 2016
-    </h3>
+    </h4>
     <ul class="team-details">
       <li>
         Implemented Java APIs and services to support Google supply chain.
@@ -193,7 +206,7 @@
         transitioned to full-time in 2016.
       </li>
     </ul>
-    <h3 class="team-name">Miscellanous responsibilities</h3>
+    <h4 class="team-name">Miscellanous responsibilities</h4>
     <ul class="team-details">
       <li>
         Mentored several junior engineers during my time at Google, both
@@ -218,4 +231,5 @@
     research
   </div>
 </body>
+
 </html>
