--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <h2>Public Speaking Engagements</h2>
   <div class="talks">
     <ul>
+      <li><a href="https://www.youtube.com/watch?v=7KWPiRq3ZYI">Gophercon 2022</a></li>
+      <li><a href="https://www.youtube.com/watch?v=By_ZBT_RgQQ">Devfest Nantes 2022</a></li>
       <li>
         <a href="https://io.google/2021/session/7b7e7dd8-57a5-4459-a96e-1494d09efbe6/?lng=en">Google I/O 2021
           virtual</a>
