Add Datadog work experience

--- a/index.html
+++ b/index.html
@@ -82,12 +82,32 @@
       Datadog | April 2022 - current
     </h3>
     <h4 class="team-name">
-      APM Integration Go Team Lead
+      APM Client Libraries Go Tracing Team (Application Performance Monitoring)
     </h4>
     <ul class="team-details">
       <li>
         <p>
-          Team Lead for tracing agent and Go tracing libraries in APM.
+          Engineering Manager and Tech Lead for a team of 6 software engineers,
+          junior to senior, owning the Tracing components of Datadog’s Go (Golang)
+          Open Source Client Libraries and the Datadog Trace Agent.
+        </p>
+      </li>   
+      <li>
+        <p>
+          Organizational leadership (40+ eng) with data privacy and OpenTelemetry -
+          involved with W3C context propagation and 128-bit trace ids, and led
+          OpenTelemetry API support.
+        </p>
+      </li>
+      <li>
+        <p>
+          Established team processes from scratch using Agile methodologies.
+          This has led to better collaboration, quarterly planning, and execution.
+        </p>
+      </li>
+      <li>
+        <p>
+          Established software launch requirements for the organization.
         </p>
       </li>
     </ul>
