Clarify technical skills

--- a/index.html
+++ b/index.html
@@ -63,14 +63,10 @@
 
   <div class="languages-skills">
     <ul class="no-bullet">
-      <li><b>Languages</b>: Go, Java, Javascript, HTML/CSS, SQL, Python, Typescript</li>
+      <li><b>Programming Languages</b>: Go, Java, Python, Javascript, HTML/CSS, SQL, Typescript</li>
       <li>
-        <b>Technical</b>: System Design, Fuzzing, Accessibility, Security,
-        Vulnerability Triage, Git, OSS
-      </li>
-      <li>
-        <b>Core Skills</b>: Cross-Functional Leadership, Mentoring, Public
-        Speaking, Teamwork
+        <b>Technical</b>: Library Design, Backend Systems Design, Open Source, OpenTelemetry,
+        Security, Privacy, Observability, Accessibility
       </li>
     </ul>
   </div>
