Highlight key parts resume

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <li><b>Programming Languages</b>: Go, Java, Python, Javascript, HTML/CSS, SQL, Typescript</li>
       <li>
         <b>Technical</b>: Library Design, Backend Systems Design, Open Source, OpenTelemetry,
-        Security, Privacy, Observability, Accessibility
+        Agile, Security, Privacy, Observability, Accessibility
       </li>
     </ul>
   </div>
@@ -84,20 +84,20 @@
       <li>
         <p>
           Engineering Manager and Tech Lead for a team of 6 software engineers,
-          junior to senior, owning the Tracing components of Datadog’s Go (Golang)
-          Open Source Client Libraries and the Datadog Trace Agent.
+          junior to senior, owning the Tracing components of <b>Datadog's Go (Golang)
+          Open Source Client Libraries</b> and the <b>Datadog Trace Agent</b>.
         </p>
       </li>   
       <li>
         <p>
-          Organizational leadership (40+ eng) with data privacy and OpenTelemetry -
-          involved with W3C context propagation and 128-bit trace ids, and led
-          OpenTelemetry API support.
+          Organizational leadership (40+ eng) with <b>data privacy</b> and
+          <b>OpenTelemetry</b> - involved with W3C context propagation and
+          128-bit trace ids, and led OpenTelemetry API support.
         </p>
       </li>
       <li>
         <p>
-          Established team processes from scratch using Agile methodologies.
+          Established team processes from scratch using <b>Agile methodologies</b>.
           This has led to better collaboration, quarterly planning, and execution.
         </p>
       </li>
@@ -116,7 +116,7 @@
     <ul class="team-details">
       <li>
         <p>
-          Tech Lead for Go fuzzing, which supports Go developers in finding and
+          Tech Lead for <b>fuzzing</b>, which supports Go developers in finding and
           fixing bugs and security exploits in their programs. This is the first
           programming language to provide this functionality in its standard
           toolchain, and promotes the security of the Go ecosystem. When I began
@@ -124,8 +124,8 @@
         </p>
         <p>
           I was the lead of this ~2 year effort at all stages of development. I
-          authored the
-          <a href="https://golang.org/s/draft-fuzzing-design">API and CLI design</a>,
+          <b>authored the
+          <a href="https://golang.org/s/draft-fuzzing-design">API and CLI design</a></b>,
           and led implementation, product planning, documentation, public
           communications, and launch.
         </p>
@@ -139,8 +139,8 @@
       </li>
       <li>
         <p>
-          Tech Lead for production implementation of the module mirror, checksum database,
-          and index (<a href="https://proxy.golang.org">proxy.golang.org</a>,
+          <b>>Tech Lead for production implementation of the module mirror, checksum database,
+          and index</b> (<a href="https://proxy.golang.org">proxy.golang.org</a>,
           <a href="https://sum.golang.org">sum.golang.org</a>,
           and <a href="https://index.golang.org">index.golang.org</a> respectively),
           using the
@@ -163,8 +163,8 @@
           frontend.
         </p>
         <p>
-          This service has an SLO of 5 9s, and I was a member of the oncall team for
-          2.5 years.
+          This service has an SLO of 5 9s, and I was a <b>member of the oncall team for
+          2.5 years</b>.
         </p>
         <p>
           I traveled around the world to <a href="https://youtu.be/KqTySYYhPUE">present</a>
@@ -173,7 +173,7 @@
         </p>
       </li>
       <li>
-        Triaged and fixed vulnerabilities in the Go standard library,
+        Triaged and <b>fixed vulnerabilities in the Go standard library</b>,
         implemented hardening measures and security fixes as a member of the
         Go security team.
       </li>
@@ -190,7 +190,7 @@
         Technical Program Manager.
       </li>
       <li>
-        Trained engineers/UX, fixed accessibility issues, and facilitated
+        Trained engineers/UX, <b>fixed accessibility issues</b>, and facilitated
         systemic change in the organization to make workplace tools accessible
         and usable for employees with disabilities. Worked on tools to track
         accessibility progress across the organization.
@@ -208,11 +208,10 @@
     </h4>
     <ul class="team-details">
       <li>
-        Implemented Java APIs and services to support Google supply chain.
-        This work mostly involved writing business logic around external APIs.
+        Implemented <b>Java APIs and services</b> to support Google supply chain.
+        This work involved writing business logic on top of external APIs.
         I owned the integration work involved with supporting new
-        shipping carriers for return slips of Google orders, among other
-        responsibilities.
+        shipping carriers for return slips of Google orders.
       </li>
       <li>
         I was a member of the oncall team, and I partnered with Site
@@ -232,7 +231,7 @@
       </li>
       <li>Hosted two interns, and co-hosted an engineering resident.</li>
       <li>
-        Conducted over 50 technical interviews, both over the phone, and
+        <b>Conducted over 50 technical interviews</b>, both over the phone, and
         in-person, and been a part of the hiring decisions for several
         different roles at Google.
       </li>
