Add bio summary

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   <!-- Resume -->
   <h1>Katie Hockman</h1>
 
+  <p>
+    I'm a software engineer, currently engineering manager, with over 8 years of
+    professional experience. I've been a technical leader across a wide set of
+    domains, including highly distributed backend systems, open source client libraries,
+    and programming language tools. I have a love and a passion for the Go programming
+    language, and previously worked on the Go team at Google for 3.5 years.
+  </p>
+
+  <p>
+    <b>
+      I'm currently seeking senior+ software engineering or management roles in Japan,
+      either remote, hybrid, or in-office from Tokyo.
+    </b>
+  </p>
+
+
   <div class="communication">
     <ul class="no-bullet">
       <li>
@@ -85,9 +101,9 @@
         <p>
           Engineering Manager and Tech Lead for a team of 6 software engineers,
           junior to senior, owning the Tracing components of <b>Datadog's Go (Golang)
-          Open Source Client Libraries</b> and the <b>Datadog Trace Agent</b>.
+            Open Source Client Libraries</b> and the <b>Datadog Trace Agent</b>.
         </p>
-      </li>   
+      </li>
       <li>
         <p>
           Organizational leadership (40+ eng) with <b>data privacy</b> and
@@ -125,7 +141,7 @@
         <p>
           I was the lead of this ~2 year effort at all stages of development. I
           <b>authored the
-          <a href="https://golang.org/s/draft-fuzzing-design">API and CLI design</a></b>,
+            <a href="https://golang.org/s/draft-fuzzing-design">API and CLI design</a></b>,
           and led implementation, product planning, documentation, public
           communications, and launch.
         </p>
@@ -140,7 +156,7 @@
       <li>
         <p>
           <b>>Tech Lead for production implementation of the module mirror, checksum database,
-          and index</b> (<a href="https://proxy.golang.org">proxy.golang.org</a>,
+            and index</b> (<a href="https://proxy.golang.org">proxy.golang.org</a>,
           <a href="https://sum.golang.org">sum.golang.org</a>,
           and <a href="https://index.golang.org">index.golang.org</a> respectively),
           using the
@@ -164,7 +180,7 @@
         </p>
         <p>
           This service has an SLO of 5 9s, and I was a <b>member of the oncall team for
-          2.5 years</b>.
+            2.5 years</b>.
         </p>
         <p>
           I traveled around the world to <a href="https://youtu.be/KqTySYYhPUE">present</a>
