add Japanese flags

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
   <p>
     <b>
-      I'm currently seeking senior+ software engineering or management roles in Japan,
-      either remote, hybrid, or in-office from Tokyo.
+      &#127471;&#127477; &#127471;&#127477; I'm currently seeking senior+ software engineering
+      or management roles in Japan, either remote, hybrid, or in-office from
+      Tokyo. &#127471;&#127477; &#127471;&#127477;
     </b>
   </p>
 
