--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </li>
       <li>
         <p>
-          <b>>Tech Lead for production implementation of the module mirror, checksum database,
+          <b>Tech Lead for production implementation of the module mirror, checksum database,
             and index</b> (<a href="https://proxy.golang.org">proxy.golang.org</a>,
           <a href="https://sum.golang.org">sum.golang.org</a>,
           and <a href="https://index.golang.org">index.golang.org</a> respectively),
