add roles at each job

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <div class="experience">
     <h3 class="job-title">
-      Datadog | April 2022 - current
+      Datadog - Engineering Manager | April 2022 - current
     </h3>
     <h4 class="team-name">
       APM Client Libraries Go Tracing Team (Application Performance Monitoring)
@@ -125,7 +125,7 @@
       </li>
     </ul>
     <h3 class="job-title">
-      Google | June 2015 - Februrary 2022
+      Google - Senior Software Engineer | June 2015 - Februrary 2022
     </h3>
     <h4 class="team-name">
       Go Language Team, Go Security Team: August 2018 - February 2022
