--- a/index.html
+++ b/index.html
@@ -10,19 +10,11 @@
   <h1>Katie Hockman</h1>
 
   <p>
-    I'm a software engineer, currently engineering manager, with over 8 years of
+    I'm a software engineer, currently engineering manager, with over 9 years of
     professional experience. I've been a technical leader across a wide set of
     domains, including highly distributed backend systems, open source client libraries,
     and programming language tools. I have a love and a passion for the Go programming
     language, and previously worked on the Go team at Google for 3.5 years.
-  </p>
-
-  <p>
-    <b>
-      &#127471;&#127477; &#127471;&#127477; I'm currently seeking senior+ software engineering
-      or management roles in Japan, either remote, hybrid, or in-office from
-      Tokyo. &#127471;&#127477; &#127471;&#127477;
-    </b>
   </p>
 
 
@@ -92,7 +84,21 @@
 
   <div class="experience">
     <h3 class="job-title">
-      Datadog - Engineering Manager | April 2022 - current
+      Mercari - Software  Engineer | Tokyo | May 2024 - current
+    </h3>
+    <h4 class="team-name">
+      Platform DX (Developer Experience)
+    </h4>
+    <ul class="team-details">
+      <li>
+        <p>
+          Software Engineer with a focus on improving the platform
+          experience for all Mercari developers.
+        </p>
+      </li>
+    </ul>
+    <h3 class="job-title">
+      Datadog - Engineering Manager | New York | April 2022 - February 2024
     </h3>
     <h4 class="team-name">
       APM Client Libraries Go Tracing Team (Application Performance Monitoring)
@@ -125,7 +131,7 @@
       </li>
     </ul>
     <h3 class="job-title">
-      Google - Senior Software Engineer | June 2015 - Februrary 2022
+      Google - Senior Software Engineer | New York | June 2015 - Februrary 2022
     </h3>
     <h4 class="team-name">
       Go Language Team, Go Security Team: August 2018 - February 2022
