--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <h1>Katie Hockman</h1>
 
   <p>
-    I'm a software engineer, currently engineering manager, with over 9 years of
-    professional experience. I've been a technical leader across a wide set of
-    domains, including highly distributed backend systems, open source client libraries,
-    and programming language tools. I have a love and a passion for the Go programming
-    language, and previously worked on the Go team at Google for 3.5 years.
+    I'm a software engineer with over 9 years of professional experience. I've been a
+    technical leader across a wide set of domains, including highly distributed backend
+    systems, open source Go client libraries, developer experience, and CLI tools. I have
+    a love and a passion for the Go programming language, and previously worked on the Go
+    team at Google for 3.5 years.
   </p>
 
 
