--- a/index.html
+++ b/index.html
@@ -87,13 +87,25 @@
       Mercari - Software  Engineer | Tokyo | May 2024 - current
     </h3>
     <h4 class="team-name">
-      Platform DX (Developer Experience)
+      Platform Developer Experience Team
     </h4>
     <ul class="team-details">
       <li>
         <p>
-          Software Engineer with a focus on improving the platform
-          experience for all Mercari developers.
+          Technical Lead for company-wide Go language standardization
+          across 7+ orgs with a focus on establishing shared libraries
+          and creating an “inner source” solution. Defining the long
+          term roadmap, authoring the technical design, and leading
+          implementation and cross-team collaboration.
+        </p>
+      </li>
+      <li>
+        <p>
+          Technical Lead to automate code and infrastructure scanning for
+          production readiness, which was the top pain point for platform
+          users and our highest level OKR. Identified the problem, designed
+          the technical solution, led the engineering team, and was the
+          primary code contributor and reviewer.
         </p>
       </li>
     </ul>
